<resources>
    <string name="app_name">LaboratorioCalificado</string>
    <string name="tipo_de_pizza">Tipo de Pizza</string>
    <string name="tipo_de_masa">Tipo de Masa</string>
    <string name="masa_gruesa">Masa Gruesa</string>
    <string name="masa_artesanal">Masa Artesanal</string>
    <string name="masa_delgada">Masa delgada</string>
    <string name="extra_queso_mozarella">Extra queso mozarella</string>
    <string name="complementos">Complementos</string>
    <string name="extra_jam_n">Extra jamón</string>
    <string name="direcci_n">Dirección</string>
    <string name="ordenar">Ordenar!</string>

    <string-array name="android_layout_arrays">
        <item>Americana</item>
        <item>Pepperoni</item>
        <item>Hawaiana</item>
        <item>Meat Lover</item>
    </string-array>

</resources>
